fix(mobile): improved context menu dismissal on iOS and removed white bar on Android

--- a/frontend/input.css
+++ b/frontend/input.css
@@ -6,6 +6,6 @@
 
     html,
     body {
-        @apply h-full w-full overflow-hidden bg-base-100 text-base-content;
+        @apply min-h-[100dvh] w-full overflow-hidden bg-base-100 text-base-content overscroll-behavior-y-none;
     }
 }
